# cafe-duty

./: .gitignore  Dockerfile  README.md  TODO.md  TupleGenerationExample.txt  TupleGenerator.txt  cafe-duty.cabal  run.sh
cafe-duty/: LICENSE  README.md  cafe-duty.cabal  stack.yaml
cafe-duty/db/Team/: RobustaTest.json  aaaaa.json  other.json  robusta.json
cafe-duty/src/: Main.hs
cafe-duty/src/App/: Api.hs  HomePageService.hs  Repository.hs  RosterGeneration.hs  Service.hs  TeamPageService.hs
cafe-duty/src/App/Helper/: FileDB.hs  Lists.hs
cafe-duty/src/App/Roster/: Repository.hs  RosterGeneration.hs  Service.hs  Types.hs
cafe-duty/static/css/: demo.css  main.css
cafe-duty/templates/: complete_duty.html  edit_team.html  index.html  new_team.html
db/Team/: RobustaTest1.json  robusta.json
db/TeamDetails/: Robusta.json  T2.json  Test1.json  Test2.json  Ultimate.json
db/TeamRoster/: Robusta.json  T2.json  Test1.json  Test2.json  Ultimate.json
docs/: TODO.md  TupleGenerationExample.txt  dev_tips.md
src/App/: Api.hs  ErrorPageService.hs  HomePageService.hs  TeamPageService.hs
src/App/Backup/: BackupApi.hs
src/App/Helper/: FileDB.hs  Lists.hs  Strings.hs
src/App/Pages/: BackupPageService.hs  ErrorPageService.hs  HomePageService.hs  TeamPageService.hs
src/App/Roster/: AppService.hs  DomainService.hs  Repository.hs  RosterGeneration.hs  Service.hs  Types.hs
src/App/TeamDetails/: AppService.hs  Repository.hs  Types.hs
static/js/: main.js
templates/: Error.html  backup.html  complete_duty.html  edit_team.html  index.html  new_team.html  view_teams.html
