name:                cafe-duty
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/afcastano/cafe-duty#readme
license:             BSD3
license-file:        LICENSE
author:              Andres Castano
maintainer:          andresfelipecastano@gmail.com
copyright:           2016 Andres Castano
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cafe-duty
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       App.Api,

                       App.Pages.HomePageService,
                       App.Pages.TeamPageService,
                       App.Pages.ErrorPageService,
                       App.Pages.BackupPageService,

                       App.Roster.AppService,
                       App.Roster.DomainService,
                       App.Roster.RosterGeneration,
                       App.Roster.Types,
                       App.Roster.Repository,

                       App.TeamDetails.Repository,
                       App.TeamDetails.Types,

                       App.Backup.BackupApi,

                       App.Helper.Lists,
                       App.Helper.FileDB,
                       App.Helper.Strings
  build-depends:       base >= 4.7 && < 5,
                       scotty,
                       hastache,
                       aeson,
                       bytestring,
                       directory,
                       text,
                       containers,
                       aeson-pretty,
                       wai,
                       wai-middleware-static,
                       wai-extra

